gruntfile sync custom url

--- a/generators/app/templates/shared/theme/.docs/development-environment/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development-environment/index-dev.html
@@ -123,6 +123,12 @@ build.images.favicon
 build.images.itunes
 build.sprite</pre>
 
+
+<h4>BROWSER SYNC</h4>
+<pre>
+sync
+sync --url=LOCALMACHINEURL</pre>
+
 </section>
 
 </div><!-- #page -->
