--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -127,7 +127,7 @@ build.sprite</pre>
 <h4>BROWSER SYNC</h4>
 <pre>
 sync
-sync --url=LOCALMACHINEURL</pre>
+sync --url=LOCALSERVERURL</pre>
 
 </section>
 
