fix incorrect page title class

--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -69,6 +69,10 @@ brew link freetype
             <code>npm install</code>
         </li>
         <li>
+            <p>Run initial tasks again to gaurd against error when running this through Yeoman.</p>
+            <code>grunt build.dev</code>
+        </li>
+        <li>
             <p>Now you should be able to run <code>grunt watch</code> to compile css among other commands found in the <a href="#quick-reference">Quick Reference</a> section.</p>
         </li>
     </ol>
