fix incorrect region sidebar class in base css

--- a/generators/app/templates/shared/theme/src/sass/components/_page-theme.scss
+++ b/generators/app/templates/shared/theme/src/sass/components/_page-theme.scss
@@ -103,7 +103,7 @@ body {
    ========================================================================== */
 
 
-.region-sidebar-first {
+.region__sidebar-first {
 }
 
 
@@ -112,7 +112,7 @@ body {
    ========================================================================== */
 
 
-.region-sidebar-second {
+.region__sidebar-second {
 }
 
 
