src & dest folders for retina image resizing, add package global variables

--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -118,6 +118,8 @@ watch.images
 minify.images
 
 build.images
+build.images.sprites
+build.images.resize
 build.images.web
 build.images.apple
 build.images.android
