add retina folders and readme to image resize src

--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -119,7 +119,7 @@ minify.images
 
 build.images
 build.images.sprites
-build.images.resize
+build.images.resize (2x, 3x folders)
 build.images.web
 build.images.apple
 build.images.android
