remove block comment from mixin file

--- a/generators/app/templates/shared/theme/src/sass/_mixins.scss
+++ b/generators/app/templates/shared/theme/src/sass/_mixins.scss
@@ -524,11 +524,9 @@ $baseline-px: $base-font-size;
 // RESPONSIVE
 ////////////////////////////
 
-/**
- * Intrinsic Ratio Helper Function
- * Used for responsive embed videos, etc...
- */
 
+// Intrinsic Ratio Helper Function
+// Used for responsive embed videos, etc...
 @mixin intrinsicRatioContainer($width, $height) {
   height: 0;
   position: relative;
