add bootstrap grid file

--- a/generators/app/templates/shared/theme/src/sass/components/_page-layout.scss
+++ b/generators/app/templates/shared/theme/src/sass/components/_page-layout.scss
@@ -1,5 +1,6 @@
 /* @partial page-layout */
 
 // Comment out unwanted layout
+// @import "layouts/_bootstrap-based-grid.scss";
 @import "layouts/_page-layout--fluid.scss";
 // @import "layouts/_page-layout--fixed.scss";
