add oldie processor, adjust normalize to core as source, add aliases for postcss modern and stylwguide shortcut

--- a/generators/app/templates/shared/theme/src/sass/_theme.scss
+++ b/generators/app/templates/shared/theme/src/sass/_theme.scss
@@ -90,7 +90,7 @@ $font-monospace:   $courier;
 
 
 // =============================================================================
-// THEME COLORS
+// COLORS VARIABLES
 // =============================================================================
 
 
@@ -120,7 +120,7 @@ $link-text-decoration: none;
 
 
 // =============================================================================
-// FORM ELEMENTS
+// ELEMENTS (ATOM) VARIABLES
 // =============================================================================
 
 
