--- a/generators/app/templates/shared/theme/src/sass/styles.scss
+++ b/generators/app/templates/shared/theme/src/sass/styles.scss
@@ -21,16 +21,18 @@
 // such as a form label, an input or a button.
 
 @import "atoms/_normalize.scss";
+@import "atoms/_links.scss";
+@import "atoms/_lists.scss";
 @import "atoms/_helpers.scss";
 @import "atoms/_animation.scss";
 @import "atoms/_sprites.scss";
 @import "atoms/_typography.scss";
-@import "atoms/_field.scss";
-@import "atoms/_buttons.scss";
 @import "atoms/_form-elements.scss";
-@import "atoms/_fieldsets.scss";
 @import "atoms/_buttons.scss";
+@import "atoms/_fieldsets.scss";
 @import "atoms/_tables.scss";
+@import "atoms/_field.scss";
+
 
 
 
