--- a/generators/app/templates/shared/theme/src/sass/atoms/_fieldsets.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_fieldsets.scss
@@ -15,13 +15,10 @@ legend {
 fieldset,
 .fieldset {
   border-color: $fieldset-border-color;
-  @include apply-side-rhythm-border(top,    $width: 1px, $lines: 0.35);
-  @include apply-side-rhythm-border(bottom, $width: 1px, $lines: 0.65);
-  @include apply-side-rhythm-border(left,   $width: 1px, $lines: 0.65);
-  @include apply-side-rhythm-border(right,  $width: 1px, $lines: 0.65);
+  border-width: 1px;
   border-style: $fieldset-border-style;
   padding: $fieldset-padding;
   margin: $form-item-margin;
-  @include border-radius($fieldset-border-radius);
+  border-radius: $fieldset-border-radius;
   background: none repeat scroll 0 0 $fieldset-background-color;
 }
