--- a/generators/app/templates/shared/theme/src/sass/atoms/_normalize.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_normalize.scss
@@ -7,12 +7,22 @@
 ///////////////////////////////////////////////////////////////////////////////////
 
 
+body {
+  margin: 0;
+  padding: 0;
+  color: $body-font-color;
+  background-color: $body-bgrd-color;
+}
+
+
 /* HTML5 display definitions
    ========================================================================== */
 
-/*
- * Corrects block display not defined in IE6/7/8/9 & FF3
- */
+
+// * Correct `block` display not defined for any HTML5 element in IE 8/9.
+// * Correct `block` display not defined for `details` or `summary` in IE 10/11
+// * and Firefox.
+// * Correct `block` display not defined for `main` in IE 11.
 
 article,
 aside,
@@ -22,6 +32,7 @@ figure,
 footer,
 header,
 hgroup,
+main,
 menu,
 nav,
 section,
@@ -29,174 +40,200 @@ summary {
   display: block;
 }
 
-/*
- * Corrects inline-block display not defined in IE6/7/8/9 & FF3
- */
+// * 1. Correct `inline-block` display not defined in IE 8/9.
+// * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
 
 audio,
 canvas,
+progress,
 video {
-  display: inline-block;
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
 }
 
-/*
- * Prevents modern browsers from displaying 'audio' without controls
- * Remove excess height in iOS5 devices
- */
+// * Prevent modern browsers from displaying `audio` without controls.
+// * Remove excess height in iOS 5 devices.
 
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-/*
- * Addresses styling for 'hidden' attribute not present in IE7/8/9, FF3, S4
- * Known issue: no IE6 support
- */
+// * Address `[hidden]` styling not present in IE 8/9/10.
+// * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
 
-[hidden] {
+[hidden],
+template {
   display: none;
 }
 
-/* Address styling not present in IE 8/9, Safari 5, and Chrome. */
+
+/* Forms
+   ========================================================================== */
+
+
+// * Known limitation: by default, Chrome and Safari on OS X allow very limited
+// * styling of `select`, unless a `border` property is set.
+// *
+// * 1. Correct color not being inherited.
+// *    Known issue: affects color of disabled elements.
+// * 2. Correct font properties not being inherited.
+// * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+// * 4. Keep form elements constrained in their containers.
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit; /* 1 */
+  font: inherit; /* 2 */
+  font-family: $input-font-family;
+  margin: 0; /* 3 */
+  max-width: 100%; /* 4 */
+
+}
+
+// * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+// * the UA stylesheet.
+
+input {
+  line-height: normal;
+}
+
+// * Address inconsistent `text-transform` inheritance for `button` and `select`.
+// * All other form control elements do not inherit `text-transform` values.
+// * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+// * Correct `select` style inheritance in Firefox 4+ and Opera.
+
+button,
+select {
+  text-transform: none;
+}
+
+// * Address `overflow` set to `hidden` in IE 8/9/10/11
+
+button {
+  overflow: visible;
+}
+
+// * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+// *    and `video` controls.
+// * 2. Correct inability to style clickable `input` types in iOS.
+// * 3. Improve usability and consistency of cursor style between image-type
+// *    `input` and others.
+
+button,
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button; /* 2 */
+  cursor: pointer; /* 3 */
+}
+
+
+// * Re-set default cursor for disabled elements.
+
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+// * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+// * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
+
+
+input[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  box-sizing: content-box; /* 2 */
+}
+
+// * Remove inner padding and search cancel button in Safari and Chrome on OS X.
+// * Safari (but not Chrome) clips the cancel button when the search input has
+// * padding (and `textfield` appearance).
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+// Remove inner padding and border in Firefox 4+.
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+// * It's recommended that you don't attempt to style these elements.
+// * Firefox's implementation doesn't respect box-sizing, padding, or width.
+// *
+// * 1. Address box sizing set to `content-box` in IE 8/9/10.
+// * 2. Remove excess padding in IE 8/9/10.
+
+input[type="checkbox"],
+input[type="radio"] {
+  margin-right: $horiz-gutter/4;
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+// * Fix the cursor style for Chrome's increment/decrement buttons. For certain
+// * `font-size` values of the `input`, it causes the cursor style of the
+// * decrement button to change from `default` to `text`.
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+// * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+// * the UA stylesheet.
+
+input {
+  line-height: normal;
+}
+
+// * 1. Improves usability and consistency of cursor style between image-type 'input' and others
+// * 2. Corrects inability to style clickable 'input' types in iOS
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer; /* 1 */
+  -webkit-appearance: button; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+
+// * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+
 abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/* Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome. */
+
+// * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+
 b,
 strong {
   font-weight: bold;
 }
 
-/* Address styling not present in Safari 5 and Chrome. */
+// * Address styling not present in Safari and Chrome.
+
 dfn {
   font-style: italic;
 }
 
-/* Address styling not present in IE 8/9. */
+// * Address styling not present in IE 8/9.
+
 mark {
   background: #ff0;
   color: #000;
-}
-
-/* Correct font family set oddly in Safari 5 and Chrome. */
-code,
-kbd,
-pre,
-samp,
-tt,
-var {
-  font-family: $font-monospace; // The value of $font-monospace ends with ", serif".
-  @include adjust-font-size-to( $base-font-size );
-}
-
-/* Improve readability of pre-formatted text in all browsers. */
-pre {
-  white-space: pre-wrap;
-}
-
-/* Set consistent quote types. */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-/* Address inconsistent and variable font size in all browsers. */
-small {
-  font-size: 80%;
-}
-
-/* Prevent `sub` and `sup` affecting `line-height` in all browsers. */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-
-
-/* Base
-   ========================================================================== */
-
-/*
- * Addresses margins handled incorrectly in IE6/7
- */
-
-body {
-  margin: 0;
-  padding: 0;
-  color: $body-font-color;
-  background-color: $body-bgrd-color;
-}
-
-
-/* Links
-   ========================================================================== */
-
-/*
- * The order of link states are based on Eric Meyer's article:
- * http://meyerweb.com/eric/thoughts/2007/06/11/who-ordered-the-link-states
- */
-
-a {
-  color: $link-color;
-  text-decoration: $link-text-decoration;
-  @include transition-property(color);
-  @include transition-duration(.1s);
-  @include transition-timing-function(ease-in);
-}
-
-// a:visited {
-//   color: $link-color-visited;
-//   text-decoration: none;
-// }
-
-a:hover {
-  color: $link-color-hover;
-  text-decoration: none; /* ie8 */
-}
-
-a:focus {
-  color: $link-color-focus;
-  text-decoration: none; /* ie8 */
-}
-
-a:active {
-  color: $link-color-active;
-  text-decoration: none;
-}
-
-/*
- * Addresses outline displayed oddly in Chrome
- */
-
-a:focus {
-  outline: thin dotted;
-}
-
-/*
- * Addresses outline displayed oddly in Chrome
- */
-
-a:focus {
-  outline: thin dotted;
-}
-
-/*
- * Improves readability when focused and also mouse hovered in all browsers
- * people.opera.com/patrickl/experiments/keyboard/test
- */
-
-a:hover,
-a:active {
-  outline: 0;
 }
 
 
@@ -215,64 +252,9 @@ a:active {
 }
 
 
-/* Lists
-   ========================================================================== */
-
-
-/*
- * Addresses margins set differently in IE6/7
- */
-
-dl,
-menu,
-ol,
-ul {
-  margin: $vert-gutter 0;
-}
-
-ul li {
-  margin-bottom: $list-item-margin-bottom;
-}
-
-dd {
-  margin: 0 0 0 $indent-amount; /* LTR */
-}
-
-ul, ol {
-  ul, ol {
-    margin: 0; /* Turn off margins on nested lists. */
-  }
-}
-
-/*
- * Addresses paddings set differently in IE6/7
- */
-
-menu,
-ol,
-ul {
-  padding: 0 0 0 $indent-amount; /* LTR */
-}
-
-/*
- * Corrects list images handled incorrectly in IE7
- */
-
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-  margin: 0;
-  padding: 0;
-}
-
-
 /* Embedded content
    ========================================================================== */
 
-/**
- * Embedded content and figures
- */
 img {
   /* Remove border when inside `a` element in IE 8/9. */
   border: 0;
@@ -290,9 +272,7 @@ img {
   width: auto;
 }
 
-/*
- * Corrects overflow displayed oddly in IE9
- */
+// * Corrects overflow displayed oddly in IE9
 
 svg:not(:root) {
   overflow: hidden;
@@ -303,9 +283,7 @@ svg:not(:root) {
    ========================================================================== */
 
 
-/*
- * Addresses margin not present in IE6/7/8/9, S5, O11
- */
+// * Addresses margin not present in IE6/7/8/9, S5, O11
 
 figure {
   margin: 0;
