--- a/generators/app/templates/shared/theme/src/sass/atoms/_lists.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_lists.scss
@@ -16,11 +16,11 @@ ul {
 }
 
 ul li {
-  margin-bottom: $list-item-margin-bottom;
+  margin-bottom: ($vert-gutter/2);
 }
 
 dd {
-  margin: 0 0 0 $indent-amount; /* LTR */
+  margin: 0 0 0 $horiz-gutter; /* LTR */
 }
 
 ul, ol {
@@ -36,7 +36,7 @@ ul, ol {
 menu,
 ol,
 ul {
-  padding: 0 0 0 $indent-amount; /* LTR */
+  padding: 0 0 0 $horiz-gutter; /* LTR */
 }
 
 /*
